--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>test viwe</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Grey+Qo&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -16,13 +30,45 @@
     <header>
       <nav class="container wrapper">
         <h3 class="logo">Fitness</h3>
-        <ul class="menu">
+        <ul  class="menu">
           <li><a class="active" href="#">Home</a></li>
           <li><a href="#">Service</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">About</a></li>
         </ul>
+        <div class="icon">
+            <i class="fa-solid fa-bars"></i>
+        </div>
       </nav>
+      <div class="container banner">
+        <div class="banner-col">
+          <h1 class="banner-title">
+            Get body in <br />
+            <span class="banner-dec">shape</span> & stay <br />
+            healthy
+          </h1>
+          <p class="banner-desceription">
+            A huge selection of health and fitness content, healthy recipes
+            <br />and transformation stories to help you get fit and stay fit!
+          </p>
+          <button class="one">Join Club Now!</button>
+          <button class="two">Download App</button>
+        </div>
+        <div class="banner-col img-size">
+          <img src="images/Images 2.png" alt="" />
+          <div class="banner-cardone">
+            <h4 class="banner-cardone-title">500+</h4>
+            <p class="banner-cardone-dec">Free Workout Videos</p>
+          </div>
+          <div class="banner-cardtwo">
+            <div class="circle"></div>
+            <div>
+              <h4 class="banner-cardtwo-title">350+</h4>
+              <p class="banner-cardtwo-dec">Video tutorial</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
     <main></main>
     <footer></footer>
