--- a/index.html
+++ b/index.html
@@ -70,7 +70,37 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+        <section class="Change-section">
+            <div class="container Habits">
+                <h2 class="Change-title">Change Your Habits</h2>
+                <p class="Change-dec">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+                <div class="card-container">
+                    <div class="card-one">
+                        <div class="card-img"><img src="images/image 3.png" alt=""></div>
+                        <h6 class="img-title">Movement</h6>
+                        <p class="img-dec">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="card-one">
+                        <div class="card-img"><img src="images/image 2.png" alt=""></div>
+                        <h6 class="img-title">Time</h6>
+                        <p class="img-dec">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="card-one">
+                        <div class="card-img"><img src="images/image 4.png" alt=""></div>
+                        <h6 class="img-title">Practice</h6>
+                        <p class="img-dec">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="card-one">
+                       <div class="card-img"> <img src="images/image 5.png" alt=""></div>
+                        <h6 class="img-title">Weight Loss</h6>
+                        <p class="img-dec">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
   </body>
 </html>
