--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <header>
       <nav class="container wrapper">
         <h3 class="logo">Fitness</h3>
-        <ul  class="menu">
+        <ul class="menu">
           <li><a class="active" href="#">Home</a></li>
           <li><a href="#">Service</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">About</a></li>
         </ul>
         <div class="icon">
-            <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-bars"></i>
         </div>
       </nav>
       <div class="container banner">
@@ -71,35 +71,70 @@
       </div>
     </header>
     <main>
-        <section class="Change-section">
-            <div class="container Habits">
-                <h2 class="Change-title">Change Your Habits</h2>
-                <p class="Change-dec">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
-                <div class="card-container">
-                    <div class="card-one">
-                        <div class="card-img"><img src="images/image 3.png" alt=""></div>
-                        <h6 class="img-title">Movement</h6>
-                        <p class="img-dec">We believe fitness should be accessible to everyone</p>
-                    </div>
-                    <div class="card-one">
-                        <div class="card-img"><img src="images/image 2.png" alt=""></div>
-                        <h6 class="img-title">Time</h6>
-                        <p class="img-dec">We believe fitness should be accessible to everyone</p>
-                    </div>
-                    <div class="card-one">
-                        <div class="card-img"><img src="images/image 4.png" alt=""></div>
-                        <h6 class="img-title">Practice</h6>
-                        <p class="img-dec">We believe fitness should be accessible to everyone</p>
-                    </div>
-                    <div class="card-one">
-                       <div class="card-img"> <img src="images/image 5.png" alt=""></div>
-                        <h6 class="img-title">Weight Loss</h6>
-                        <p class="img-dec">We believe fitness should be accessible to everyone</p>
-                    </div>
-                    
-                </div>
+      <section class="Change-section">
+        <div class="container Habits">
+          <h2 class="Change-title">Change Your Habits</h2>
+          <p class="Change-dec">
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or <br />
+            access to a gym.
+          </p>
+          <div class="card-container">
+            <div class="card-one">
+              <div class="card-img">
+                <img src="images/image 3.png" alt="" />
+              </div>
+              <h6 class="img-title">Movement</h6>
+              <p class="img-dec">
+                We believe fitness should be accessible to everyone
+              </p>
             </div>
-        </section>
+            <div class="card-one">
+              <div class="card-img">
+                <img src="images/image 2.png" alt="" />
+              </div>
+              <h6 class="img-title">Time</h6>
+              <p class="img-dec">
+                We believe fitness should be accessible to everyone
+              </p>
+            </div>
+            <div class="card-one">
+              <div class="card-img">
+                <img src="images/image 4.png" alt="" />
+              </div>
+              <h6 class="img-title">Practice</h6>
+              <p class="img-dec">
+                We believe fitness should be accessible to everyone
+              </p>
+            </div>
+            <div class="card-one">
+              <div class="card-img">
+                <img src="images/image 5.png" alt="" />
+              </div>
+              <h6 class="img-title">Weight Loss</h6>
+              <p class="img-dec">
+                We believe fitness should be accessible to everyone
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="run-section">
+        <div class="run-main-div container">
+          <div class="run-culam">
+            <h3 class="run-titel">Run an Extra <br> Mile Easily</h3>
+            <p class="run-dec">
+              We believe fitness should be accessible to everyone, <br>everywhere,
+              regardless of income or access to a gym. <br>With hundreds of
+              professional workouts.
+            </p>
+            <button class="common">Join Now</button>
+          </div>
+          <div class="run-culamone">
+            <img src="images/run.jpg" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
