--- a/index.html
+++ b/index.html
@@ -122,16 +122,101 @@
       <section class="run-section">
         <div class="run-main-div container">
           <div class="run-culam">
-            <h3 class="run-titel">Run an Extra <br> Mile Easily</h3>
+            <h3 class="run-titel">
+              Run an Extra <br />
+              Mile Easily
+            </h3>
             <p class="run-dec">
-              We believe fitness should be accessible to everyone, <br>everywhere,
-              regardless of income or access to a gym. <br>With hundreds of
-              professional workouts.
+              We believe fitness should be accessible to everyone,
+              <br />everywhere, regardless of income or access to a gym.
+              <br />With hundreds of professional workouts.
             </p>
             <button class="common">Join Now</button>
           </div>
           <div class="run-culamone">
             <img src="images/run.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="BMI-PAD">
+        <div class="BMI">
+          <h4>BMI Calculator</h4>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or <br />access to a gym.
+          </p>
+        </div>
+      </section>
+      <section class="BIM-color">
+        <div class="container BIM-table">
+          <div class="BIMone">
+            <h5 class="Chart">BMI Calculator Chart</h5>
+            <table class="table">
+              <tr>
+                <th>BMI</th>
+                <th>Weight Status</th>
+              </tr>
+              <tr>
+                <td>Below 18.5</td>
+                <td>Underweight</td>
+              </tr>
+              <tr>
+                <td>18.5 - 24.9</td>
+                <td>Healthy</td>
+              </tr>
+              <tr>
+                <td>25.0 - 29.9</td>
+                <td>Overweight</td>
+              </tr>
+              <tr>
+                <td>30.0 - and Above</td>
+                <td>Obese</td>
+              </tr>
+            </table>
+          </div>
+          <div class="BIMone">
+            <h4>Calculate your BMI</h4>
+            <p>
+              We believe fitness should be accessible to everyone, everywhere,
+              regardless of income or access to a gym.
+            </p>
+
+            <form action="#">
+              <div class="tablefx">
+                <div class="tablebasic">
+                  <input placeholder="Height/cm" type="text" />
+                </div>
+                <div class="tablebasic">
+                  <input placeholder="Weight/kg" type="text" />
+                </div>
+              </div>
+              <div class="tablefx">
+                <div class="tablebasic">
+                  <input placeholder="Age" type="text" />
+                </div>
+                <div class="tablebasic">
+                  <select name="" id="">
+                    <option value="" disabled selected>Sex</option>
+                    <option value="Sex">Female</option>
+                    <option value="Sex">male</option>
+                  </select>
+                </div>
+              </div>
+              <div class="option">
+                <select name="" id="">
+                  <option value="" disabled selected>
+                    Select an activity factor
+                  </option>
+                  <option value="Activity">Sedentary</option>
+                  <option value="Activity">Lightly Active</option>
+                  <option value="Activity">Moderately Active</option>
+                  <option value="Activity">Very Active</option>
+                  <option value="Activity">Extremely Active</option>
+                </select>
+              </div>
+
+              <button class="common-mobail" type="submit">Calculate</button>
+            </form>
           </div>
         </div>
       </section>
