--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
           <h5>LATEST BLOG POSTS</h5>
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-            accusantium doloremque laudantium,<br> totam rem aperiam, eaque ipsa
-            quae ab illo.
+            accusantium doloremque laudantium,<br />
+            totam rem aperiam, eaque ipsa quae ab illo.
           </p>
         </div>
         <div class="blog-card container">
-          <div class="blog-all-title" >
-            <img class="img-boder" src="/images/blog1.jpg" alt="" />
+          <div class="blog-all-title">
+            <img class="img-boder" src="images/blog1.jpg" alt="" />
             <h5>10 Tips How to Prepare Meals Fast and Easy.</h5>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui
@@ -277,7 +277,7 @@
             <button class="common">View Here</button>
           </div>
           <div class="blog-all-title">
-            <img class="img-boder" src="/images/blog2.jpg" alt="" />
+            <img class="img-boder" src="images/blog2.jpg" alt="" />
             <h5>How to Maximise Time Spent at the Gym.</h5>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui
@@ -286,7 +286,7 @@
             <button class="common">View Here</button>
           </div>
           <div class="blog-all-title">
-            <img class="img-boder" src="/images/blog3.jpg" alt="" />
+            <img class="img-boder" src="images/blog3.jpg" alt="" />
             <h5>Simple Condition for all Around Fitness.</h5>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui
@@ -297,33 +297,37 @@
         </div>
       </section>
     </main>
-    <footer  >
-        <div class="container footer-all">
-            <div class="footer-bascis">
-                <h3 class="logo">Fitness</h3>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
-            </div>
-            <div class="footer-bascis">
-                <h4>Get Started</h4>
-                <ul class="footer-ul">
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Affiliate Program</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
-            </div>
-            <div class="footer-bascis">
-                <h4>Get Started</h4>
-                <ul class="footer-ul">
-                    <li><a href="#">Fitness</a></li>
-                    <li><a href="#">Platform</a></li>
-                    <li><a href="#">Workout Libary</a></li>
-                    <li><a href="#">App Design</a></li>
-                </ul>
-            </div>
+    <footer>
+      <div class="container footer-all">
+        <div class="footer-bascis">
+          <h3 class="logo">Fitness</h3>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym. With hundreds of
+            professional workouts.
+          </p>
         </div>
-        <hr class="container hr-color">
-        <p class="reserved">All right reserved @Fitness 2024</p>
+        <div class="footer-bascis">
+          <h4>Get Started</h4>
+          <ul class="footer-ul">
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Affiliate Program</a></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+        </div>
+        <div class="footer-bascis">
+          <h4>Get Started</h4>
+          <ul class="footer-ul">
+            <li><a href="#">Fitness</a></li>
+            <li><a href="#">Platform</a></li>
+            <li><a href="#">Workout Libary</a></li>
+            <li><a href="#">App Design</a></li>
+          </ul>
+        </div>
+      </div>
+      <hr class="container hr-color" />
+      <p class="reserved">All right reserved @Fitness 2024</p>
     </footer>
   </body>
 </html>
