--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <button class="two">Download App</button>
         </div>
         <div class="banner-col img-size">
-          <img src="images/Images 2.png" alt="" />
+          <img src="./images/Images 2.png" alt="" />
           <div class="banner-cardone">
             <h4 class="banner-cardone-title">500+</h4>
             <p class="banner-cardone-dec">Free Workout Videos</p>
@@ -82,7 +82,7 @@
           <div class="card-container">
             <div class="card-one">
               <div class="card-img">
-                <img src="images/image 3.png" alt="" />
+                <img src="./images/image 3.png" alt="" />
               </div>
               <h6 class="img-title">Movement</h6>
               <p class="img-dec">
@@ -91,7 +91,7 @@
             </div>
             <div class="card-one">
               <div class="card-img">
-                <img src="images/image 2.png" alt="" />
+                <img src="./images/image 2.png" alt="" />
               </div>
               <h6 class="img-title">Time</h6>
               <p class="img-dec">
@@ -100,7 +100,7 @@
             </div>
             <div class="card-one">
               <div class="card-img">
-                <img src="images/image 4.png" alt="" />
+                <img src="./images/image 4.png" alt="" />
               </div>
               <h6 class="img-title">Practice</h6>
               <p class="img-dec">
@@ -109,7 +109,7 @@
             </div>
             <div class="card-one">
               <div class="card-img">
-                <img src="images/image 5.png" alt="" />
+                <img src="./images/image 5.png" alt="" />
               </div>
               <h6 class="img-title">Weight Loss</h6>
               <p class="img-dec">
@@ -134,7 +134,7 @@
             <button class="common">Join Now</button>
           </div>
           <div class="run-culamone">
-            <img src="images/run.jpg" alt="" />
+            <img src="./images/run.jpg" alt="" />
           </div>
         </div>
       </section>
@@ -268,7 +268,7 @@
         </div>
         <div class="blog-card container">
           <div class="blog-all-title">
-            <img class="img-boder" src="images/blog1.jpg" alt="" />
+            <img class="img-boder" src="./images/blog1.jpg" alt="" />
             <h5>10 Tips How to Prepare Meals Fast and Easy.</h5>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui
@@ -277,7 +277,7 @@
             <button class="common">View Here</button>
           </div>
           <div class="blog-all-title">
-            <img class="img-boder" src="images/blog2.jpg" alt="" />
+            <img class="img-boder" src="./images/blog2.jpg" alt="" />
             <h5>How to Maximise Time Spent at the Gym.</h5>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui
@@ -286,7 +286,7 @@
             <button class="common">View Here</button>
           </div>
           <div class="blog-all-title">
-            <img class="img-boder" src="images/blog3.jpg" alt="" />
+            <img class="img-boder" src="./images/blog3.jpg" alt="" />
             <h5>Simple Condition for all Around Fitness.</h5>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui
