--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Grey+Qo&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="./images/icon.png">
+    <link rel="icon" type="image/x-icon" href="./images/icon.png" />
   </head>
   <body>
     <header>
