--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
         <div class="container Habits">
           <h2 class="Change-title">Change Your Habits</h2>
           <p class="Change-dec">
-            We believe fitness should be accessible to everyone, everywhere,
-            regardless of income or <br />
-            access to a gym.
+            A Simple Guide to Transform Your Daily Routine and Achieve
+            Long-Lasting Success
           </p>
           <div class="card-container">
             <div class="card-one">
@@ -87,7 +86,8 @@
               </div>
               <h6 class="img-title">Movement</h6>
               <p class="img-dec">
-                We believe fitness should be accessible to everyone
+                Unlock Your Body's Potential and Embrace an Active Lifestyle"
+                How does that sound
               </p>
             </div>
             <div class="card-one">
@@ -96,7 +96,8 @@
               </div>
               <h6 class="img-title">Time</h6>
               <p class="img-dec">
-                We believe fitness should be accessible to everyone
+                Master Your Minutes and Take Control of Your Life" Is this along
+                the lines of what you wanted
               </p>
             </div>
             <div class="card-one">
@@ -105,7 +106,8 @@
               </div>
               <h6 class="img-title">Practice</h6>
               <p class="img-dec">
-                We believe fitness should be accessible to everyone
+                Cultivate Your Skills and Achieve Mastery Through Consistent
+                Effort" Let me know if this works for you
               </p>
             </div>
             <div class="card-one">
@@ -114,7 +116,8 @@
               </div>
               <h6 class="img-title">Weight Loss</h6>
               <p class="img-dec">
-                We believe fitness should be accessible to everyone
+                Your Simple Path to Shedding Pounds and Gaining Confidence" Does
+                this capture what you need
               </p>
             </div>
           </div>
@@ -128,9 +131,9 @@
               Mile Easily
             </h3>
             <p class="run-dec">
-              We believe fitness should be accessible to everyone,
-              <br />everywhere, regardless of income or access to a gym.
-              <br />With hundreds of professional workouts.
+              Your Quick Guide to Boosting Endurance and Reaching New
+              <br />Fitness Goals" Let me know if this fits what you're looking
+              for
             </p>
             <button class="common">Join Now</button>
           </div>
@@ -143,8 +146,8 @@
         <div class="BMI">
           <h4>BMI Calculator</h4>
           <p>
-            We believe fitness should be accessible to everyone, everywhere,
-            regardless of income or <br />access to a gym.
+            Quickly Determine Your Body Mass Index and Understand Your Health
+            Status" Would this description work for your needs
           </p>
         </div>
       </section>
@@ -178,8 +181,8 @@
           <div class="BIMone">
             <h4>Calculate your BMI</h4>
             <p>
-              We believe fitness should be accessible to everyone, everywhere,
-              regardless of income or access to a gym.
+              Easily Find Your Body Mass Index and Assess Your Health" Is this
+              what you had in mind
             </p>
 
             <form action="#">
@@ -225,9 +228,7 @@
         <div class="Team">
           <h4>Meet Our Team</h4>
           <p>
-            We believe fitness should be accessible to everyone, everywhere,
-            regardless of income or <br />
-            access to a gym.
+            Get to Know the Experts Behind Our Success" Does this work for you
           </p>
         </div>
 
@@ -303,9 +304,9 @@
         <div class="footer-bascis">
           <h3 class="logo">Fitness</h3>
           <p>
-            We believe fitness should be accessible to everyone, everywhere,
-            regardless of income or access to a gym. With hundreds of
-            professional workouts.
+            Unlock Your Potential with a Balanced <br> Approach to  Exercise and
+            Wellness.<br> Discover effective workouts, nutrition <br>tips, and
+            motivation strategies to achieve <br> your fitness goals. 
           </p>
         </div>
         <div class="footer-bascis">
