--- a/index.html
+++ b/index.html
@@ -304,9 +304,11 @@
         <div class="footer-bascis">
           <h3 class="logo">Fitness</h3>
           <p>
-            Unlock Your Potential with a Balanced <br> Approach to  Exercise and
-            Wellness.<br> Discover effective workouts, nutrition <br>tips, and
-            motivation strategies to achieve <br> your fitness goals. 
+            Unlock Your Potential with a Balanced <br />
+            Approach to Exercise and Wellness.<br />
+            Discover effective workouts, nutrition <br />tips, and motivation
+            strategies to achieve <br />
+            your fitness goals.
           </p>
         </div>
         <div class="footer-bascis">
